# LLaVAShield

./: .gitignore  README.md  demo.py  pyproject.toml
MMRT/: README.md  __init__.py  config.py  main.py  requirements.txt
MMRT/data/: data_loader.py
MMRT/mcts/: mcts.py  node.py
MMRT/models/attacker/: base_attacker.py  qwen2_5vl_instruct_attacker.py  qwen2_5vl_instruct_attacker_api.py
MMRT/models/attacker/image_generator/: SD3_medium_generate.py  image_pool.py
MMRT/models/evaluator/: base_evaluator.py  gpt4o_evaluator.py
MMRT/pipline/: pipeline.py  pipeline_base.py  pipeline_parallel.py
MMRT/prompts/: attack_prompt.py  evaluate_prompt.py
MMRT/utils/: intern_vl_utils.py  logger.py  time_limit.py  timer.py  utils.py
docs/: index.html
docs/static/css/: index.css
llavashield/: Untitled  llavashield_utils.py
llavashield/llava/: __init__.py
llavashield/llava/eval/: model_vqa.py
llavashield/llava/model/: __init__.py  builder.py  llava_arch.py  make_delta.py
llavashield/llava/model/language_model/: llava_mpt.py
llavashield/llava/model/multimodal_encoder/dev_eva_clip/: eva_vit.py
llavashield/llava/model/multimodal_encoder/eva_clip/: eva_clip_encoder.py  eva_vit.py
llavashield/llava/serve/: cli.py  controller.py  gradio_multi_image.py  gradio_web_server.py  model_worker.py  sglang_worker.py  test_message.py
llavashield/llava/train/: llava_shield_trainer.py  llava_trainer.py  llava_trainer_eval.py  train.py  train_dpo.py  train_mem.py
llavashield/scripts/: __init__.py  zero2.json  zero3_offload_torch_adam.json
llavashield/scripts/archived/: merge_lora_weights.py
llavashield/scripts/train/: llavashield_v1.0_7b.sh  train.yaml
llavashield/utils/: policy.py  prompt_template.py
